# hni

./: README.md  dependencies.repos
.github/workflows/: build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_rolling.yaml
hni_cpp/: CMakeLists.txt  package.xml
hni_cpp/include/hni_cpp/: chat_action_client.hpp  chat_action_server.hpp  chat_service_client.hpp  gstt_service_client.hpp  gtts_service_client.hpp  head_track_action_server.hpp  head_track_action_server2.hpp  indexes.hpp  joints_play_action_client.hpp  joints_play_action_server.hpp
hni_cpp/include/moves/: big.txt  down.txt  fear.txt  hello.txt  left.txt  little.txt  right.txt  up.txt  you.txt
hni_cpp/launch/: chat_launch.py  experiment_launch.py  experiment_nao_launch.py  experiment_pc_launch.py  head_track_launch.py
hni_cpp/src/: chat_action_client.cpp  chat_action_server.cpp  chat_service_client.cpp  gstt_service_client.cpp  gtts_service_client.cpp  head_track_action_client.cpp  head_track_action_server.cpp  head_track_action_server2.cpp  joints_play_action_client.cpp  joints_play_action_server.cpp  record.cpp
hni_interfaces/: CMakeLists.txt  package.xml
hni_interfaces/action/: ChatPlay.action  JointsPlay.action  LedsPlay.action  VideoTracker.action
hni_interfaces/msg/: LedIndexes.msg  LedModes.msg
hni_interfaces/srv/: Chat.srv  TextToSpeech.srv
hni_py/: package.xml  setup.cfg  setup.py
hni_py/hni_py/: chat_client.py  chat_service.py  face_track_client.py  face_track_server.py  g2stt_service.py  gstt_client.py  gstt_service.py  gtts_client.py  gtts_service.py  video_track_client.py  yolo_video_track_server.py
hni_py/hni_py/__pycache__/: transcribe_streaming_mic.py
